# j-link-rtt-viewer-pyqt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build_nuitka.bat  build_nuitka.sh  build_nuitka_onefile.bat  build_nuitka_onefile.sh  pyproject.toml  requirements.txt  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
docs/: USER_GUIDE.md  flashing-guide.md  manual-test-flash.md  oscilloscope-tech-research.md  oscilloscope_research_report.md  packager_comparison.md  packaging_startup_report.md  symbol-table-guide.md  target-device-name-conventions.md
scratch/: demo1_pylink_probe.py  demo2_count_allocated.py  demo3_tight_reconnect.py  demo4_retry_count.py  demo5_full_app_realhw.py  step1_pylink_num_up_buffers.py  step1b_reset_then_reconnect.py  step1c_persistent_jlink.py
scripts/: README.md  build_icons.py  measure_launch.py  package_release.ps1  package_release.sh  release.ps1
src/: config.json  main.py
tests/: conftest.py  test_ansi_parser.py  test_config_service.py  test_crc_utils.py  test_flash_coordination.py  test_flash_file_parser.py  test_flash_page.py  test_flash_worker.py  test_floating_panel.py  test_i18n.py  test_jlink_backend.py  test_jlink_worker.py  test_logger.py  test_memory_service.py  test_memory_viewer_page.py  test_pyocd_backend.py  test_rtt_monitor_page.py  test_screenshot_smoke.py  test_settings_page.py  test_symbol_table_view.py  test_target_discovery.py  test_ui_font.py
tools/: diag_disconnect.py  diag_disconnect_output.txt  diag_rtt.py  diag_rtt_output.txt  e2e_worker.py  e2e_worker_output.txt
(+57 files in other folders)
