[project]
name = "jlink-rtt-viewer"
version = "0.6.0"
description = "基于 PySide6 + QFluentWidgets 的 J-Link RTT 查看与内存导出工具"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
